# UnityPlugin

./: .gitignore
RenderingPlugin/: CMakeLists.txt  RenderingPlugin.cpp  RenderingPlugin.h  VideoCap.cpp  VideoCap.h
UnityProject/Assets/: UseRenderingPlugin.cs
UnityProjectCopy/: Assembly-CSharp.csproj  UnityProject (copy).sln
UnityProjectCopy/Assets/: UseRenderingPlugin.cs
UnityProjectCopy/ProjectSettings/: ProjectSettings.asset
UnityProjectCopy/Temp/: UnityTempFile-8ba48a4bfcdd84e66b5eab7db3c50407  UnityTempFile-df016d1bc28994049a062d9b29db5a2f
UnityProjectCopy/Temp/__Backupscenes/: 0.backup
